--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,11 @@
 
 export(get_obj)
 export(js_data_get.js_data)
-import(httr)
-import(jsonlite)
-import(magrittr)
+importFrom(httr,GET)
+importFrom(httr,add_headers)
+importFrom(httr,content)
 importFrom(jsonlite,fromJSON)
+importFrom(jsonlite,rbind_pages)
+importFrom(magrittr,"%>%")
 importFrom(pingr,is_online)
 importFrom(purrr,map)
