new function added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(js_data_get)
 exportClasses(js_data)
 exportMethods(js_data_ret)
 importFrom(httr,GET)
+importFrom(httr,POST)
 importFrom(httr,add_headers)
 importFrom(httr,content)
 importFrom(jsonlite,fromJSON)
